# viz-raster

./: .gitignore  CONTRIBUTING.md  ConfigManager.py  Dockerfile  Palette.py  README.md  Raster.py  RasterTiler.py  TilePathManager.py  WebImage.py  main.py  pyproject.toml  raster.py  requirements.txt  setup.py
.github/workflows/: publish-docker-image.yaml
example/: main.py  staging-summary.csv
example/geotiffs/WorldCRS84Quad/0/0/: 0.tif
example/geotiffs/WorldCRS84Quad/1/0/: 0.tif
example/geotiffs/WorldCRS84Quad/10/326/: 78.tif
example/geotiffs/WorldCRS84Quad/11/354/: 227.tif
example/geotiffs/WorldCRS84Quad/11/652/: 157.tif
example/geotiffs/WorldCRS84Quad/12/1305/: 314.tif  315.tif
example/geotiffs/WorldCRS84Quad/13/1418/: 908.tif  909.tif
example/geotiffs/WorldCRS84Quad/13/1419/: 908.tif
example/geotiffs/WorldCRS84Quad/13/2611/: 628.tif  629.tif  630.tif  631.tif
example/geotiffs/WorldCRS84Quad/2/1/: 0.tif
example/geotiffs/WorldCRS84Quad/3/2/: 0.tif
example/geotiffs/WorldCRS84Quad/4/5/: 1.tif
example/input-data/large-shapefile-example/: large-shapefile-example.shp
examples/complete-workflow/: main.py
examples/complete-workflow/input-data/large-shapefile-example/: large-shapefile-example.shx
examples/minimal-example/: README.md  config__updated.json  make-rasters.py  rasterization_events.csv  rasters_summary.csv
pdgraster/: ConfigManager.py  Deduplicator.py  Palette.py  Raster.py  RasterTiler.py  TilePathManager.py  WMTSCapabilitiesGenetator.py  WebImage.py  __init__.py  __main__.py
tests/: test_00_init.py
(+37 files in other folders)
